# aiga-llm-test

./: .gitignore  README.md  database.py  logger.py  main.py  pyproject.toml  requirements.txt  rsync_my_git.sh  runModel.py  start.sh  test1-pydantic1.py  test1-pydantic2.py  test3.py  test4-fewshot.py  test4.py  test5-fewshot.py
SystemMessage/naver_cafe/: message-en.txt  message-ko.txt
SystemMessage/naver_kin/: message-ko.txt  message.txt
SystemMessage/youtube/: message-kr.txt  message.txt
baseSample/: Ollama Gemma.ipynb  azure-langchain-openai-test.py  azure-openai-test.py  bedrock_test.py  index.py  index2.py  index3.py  index4-1.py  index4-2.py  index4.py  index5-1.py  index5-2.py  index5-3.py  index5-4-korean-prompt.py  index5.py  index6.py  index7.ipynb  index7.py  index8.py  index9-1.py  index9.py
fewshot/naver_cafe/: fewshot-old.json  fewshot.json
fewshot/naver_kin/: fewshot.json
fewshot/youtube/: fewshot.json
pubmed_firstAuthor_translate/: nameList-Ex-Reverse.json  pubmed_distinct.csv  test6.py
result/: result.json
